tpctk-fs-umami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    name: umami
