tpctk-fs-umami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: umami
spec:
  selector:
    matchLabels:
      app: umami
  replicas: 1
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
      - name: umami
        image: ghcr.io/mikecao/umami:mysql-v1.32.1
        ports:
        - containerPort: 3000
          name: umami
      nodeSelector:
        nodeCategory: worker
