tpctk-fs-umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: umami
spec:
  ports:
  - port: 3000
    name: web
  selector:
    app: umami
