tpctk-fs-umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  namespace: umami
  annotations:
    cert-manager.io/cluster-issuer: 'prod-issuer-amd64'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - umami.precasttoolkit.com
    secretName: umami-tls-prod-v1
  rules:
  - host: umami.precasttoolkit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: umami
            port:
              number: 3000
